# ComputerScienceMAI

./: README.md  taylor.fsx
Variant 4/: Lab1-4.ipynb
lab1/: CMakeLists.txt  CheckStr.cpp  CheckStr.h  Makefile  lesson.cpp  test.cpp
lab2/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  lab_02_exe  main.cpp  test1.cpp  tests
lab2/Testing/Temporary/: CTestCostData.txt
lab2/include/: octal.h
lab2/src/: octal.cpp
lab3/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main  main.cpp  test1.cpp
lab3/include/: array.h  figure.h  rectangle.h  rhomb.h  trapezium.h
lab3/src/: array.cpp  figure.cpp  rectangle.cpp  rhomb.cpp  trapezium.cpp
lab4/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main  main.cpp  test1.cpp
lab4/include/: array.h  arrayFig.h  figure.h  rectangle.h  rhomb.h  trapezium.h
lab5/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main  main.cpp  test1.cpp
lab5/include/: allocator.h  iterator.h  list.h
lab6/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  log.txt  main  main.cpp  test1.cpp
lab6/include/: bear.h  declaration.h  factory.h  fight.h  npc.h  observer.h  observerConsole.h  observerFile.h  orc.h  squirrel.h
lab6/src/: bear.cpp  fight.cpp  npc.cpp  observerConsole.cpp  observerFile.cpp  orc.cpp  squirrel.cpp
lab7/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  log.txt  main  main.cpp  test1.cpp
lab7/include/: bear.h  declaration.h  factory.h  fight.h  npc.h  observer.h  observerConsole.h  observerFile.h  orc.h  squirrel.h
lab7/src/: bear.cpp  factory.cpp  fight.cpp  npc.cpp  observerConsole.cpp  observerFile.cpp  orc.cpp  squirrel.cpp
